--- a/src/DevAndrey.App/Views/Fornecedores/Index.cshtml
+++ b/src/DevAndrey.App/Views/Fornecedores/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DevAndrey.App.ViewModels.FornecedorViewModel>
+﻿@using DevAndrey.App.Extensions
+@model IEnumerable<DevAndrey.App.ViewModels.FornecedorViewModel>
 
 @{
     ViewData["Title"] = "Lista de Fornecedores";
@@ -31,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
+                @this.FormataDocumento(item.TipoFornecedor, item.Documento)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ativo)
