Modal de atualizar endereço; Buscar de cep por ajax.

--- a/src/DevAndrey.App/Views/Fornecedores/Details.cshtml
+++ b/src/DevAndrey.App/Views/Fornecedores/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model DevAndrey.App.ViewModels.FornecedorViewModel
+﻿@using DevAndrey.App.Extensions;
+@model DevAndrey.App.ViewModels.FornecedorViewModel
 
 @{
     ViewData["Title"] = "Detalhes";
