--- a/src/DevAndrey.App/Views/Fornecedores/Details.cshtml
+++ b/src/DevAndrey.App/Views/Fornecedores/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using DevAndrey.App.Extensions;
+﻿@using DevAndrey.App.Extensions
 @model DevAndrey.App.ViewModels.FornecedorViewModel
 
 @{
@@ -32,7 +32,7 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-dark" supress-by-claim-name="Fornecedor" supress-by-claim-value="Editar" asp-action="Edit" asp-route-id="@Model.Id">Editar</a>
+    <a class="btn btn-dark"  supress-by-claim-name="Fornecedor" supress-by-claim-value="Editar" asp-action="Edit" asp-route-id="@Model.Id">Editar</a>
     <a class="btn btn-info" asp-action="Index">Voltar</a>
 </div>
 
