--- a/src/DevAndrey.App/Views/Produtos/Index.cshtml
+++ b/src/DevAndrey.App/Views/Produtos/Index.cshtml
@@ -6,8 +6,11 @@
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<vc:summary></vc:summary>
-<p>
+
+<vc:Summary></vc:Summary>
+
+<p supress-by-claim-name="Produto" supress-by-claim-value="Adicionar">
     <a class="btn btn-info" asp-action="Create">Novo Produto</a>
 </p>
-<partial name="_ListaProdutos" />
+
+<partial name="_ListaProdutos"/>
